Closed
Bug 644199
Opened 15 years ago
Closed 14 years ago
canvas is painted with artefacts after unlocking screen
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: AlexLakatos, Assigned: bas.schouten)
Details
Attachments
(2 files)
|
335.96 KB,
image/jpeg
|
Details | |
|
1.07 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
Build identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0) Gecko/20100101 Firefox/4.0
After unlocking the screen, the canvas element has artefacts from Windows's screen.
1.Go to http://ratemydrawings.com/bebraw/copyclip/copyclip.html
2.Lock the screen (START+L)
3.Unlock the screen
Actual Results:
3.The canvas is painted with artefacts from Windows's window
Expected Results:
3.The canvas is painted without artefacts
On Windows XP, locking the screen throws away VRAM, which means we lose the pixel data.
We could fix this in the short term by re-uploading the canvas image after it's been lost, but once we start using GPU acceleration for canvas drawing on XP, that won't work anymore. Unless we periodically "back up" the canvas image when idle, or something like that, but that won't always work and sounds like more effort than it's worth.
| Assignee | ||
Comment 2•14 years ago
|
||
We should be re-uploading when we reset the layer manager because of a screen lock, so this shouldn't be happening! Can anyone reproduce this bug?
| Assignee | ||
Comment 3•14 years ago
|
||
Not everyone can reproduce this bug probably, because a lot of drivers clear textures when created.
But we fail to upload properly after we detect no texture being present. When the surface is dirty we'll try to update, but bail after we create the missing texture. If the surface isn't dirty we won't re-upload at all.
This patch should fix that bug.
Attachment #588804 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 4•14 years ago
|
||
Comment 5•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
You need to log in
before you can comment on or make changes to this bug.
Description
•