Bug 644199: Properly re-upload after clearing mTexture because of device reset. r=roc